; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_compare_file_data.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_compare_file_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@GENERIC_READ = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32)* @compare_file_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compare_file_data(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @GENERIC_READ, align 4
  %14 = load i32, i32* @OPEN_EXISTING, align 4
  %15 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %16 = call i32 @CreateFileA(i32 %12, i32 %13, i32 0, i32* null, i32 %14, i32 %15, i32* null)
  store i32 %16, i32* %8, align 4
  %17 = call i32 (...) @GetProcessHeap()
  %18 = load i32, i32* %6, align 4
  %19 = call i64 @HeapAlloc(i32 %17, i32 0, i32 %18)
  store i64 %19, i64* %10, align 8
  %20 = load i64, i64* %10, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %42

22:                                               ; preds = %3
  %23 = load i32, i32* %8, align 4
  %24 = load i64, i64* %10, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @ReadFile(i32 %23, i64 %24, i32 %25, i32* %7, i32* null)
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %38

30:                                               ; preds = %22
  %31 = load i32*, i32** %5, align 8
  %32 = load i64, i64* %10, align 8
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @memcmp(i32* %31, i64 %32, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %38, label %36

36:                                               ; preds = %30
  %37 = load i32, i32* @TRUE, align 4
  store i32 %37, i32* %9, align 4
  br label %38

38:                                               ; preds = %36, %30, %22
  %39 = call i32 (...) @GetProcessHeap()
  %40 = load i64, i64* %10, align 8
  %41 = call i32 @HeapFree(i32 %39, i32 0, i64 %40)
  br label %42

42:                                               ; preds = %38, %3
  %43 = load i32, i32* %8, align 4
  %44 = call i32 @CloseHandle(i32 %43)
  %45 = load i32, i32* %9, align 4
  ret i32 %45
}

declare dso_local i32 @CreateFileA(i32, i32, i32, i32*, i32, i32, i32*) #1

declare dso_local i64 @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @ReadFile(i32, i64, i32, i32*, i32*) #1

declare dso_local i32 @memcmp(i32*, i64, i32) #1

declare dso_local i32 @HeapFree(i32, i32, i64) #1

declare dso_local i32 @CloseHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
